fix bag on ie11

--- a/HTML/sass/main.scss
+++ b/HTML/sass/main.scss
@@ -1446,13 +1446,14 @@ font-size: 1.2667vh;
 }
 
 // Форма обратной связи на Главной Странице
+
 .application {
 	display: flex;
 	justify-content: space-evenly;
     align-items: center;
 	background-color: #FFFFFF;
 	box-shadow: 0vh 0vh 4.6296vh rgba(133, 133, 133, 0.14);
-	min-height: 51.4815vh;
+	height: 51.4815vh;
 	margin-bottom: 10vh;
 	.right-block, .left-block {
 		width: 50%;
